--- a/src/common/style/vanilla/grid.scss
+++ b/src/common/style/vanilla/grid.scss
@@ -1,3 +1,12 @@
 @import 'vanilla-framework/scss/patterns_grid.scss';
 @include vf-p-grid;
 @include vf-p-grid-modifications;
+
+// fix compatibility with newer version of Vanilla in snapcraft.io
+
+.row {
+  box-sizing: border-box;
+  max-width: 64.875rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
